2007-06-13  Quentin Mathe <qmathe@club-internet.fr>

	Most frameworks and private services will now be installed in System
	domain.
	Warning: check redundant elements in Local and System carefully on next
	install.
	* etoile.make: Added ETOILE_CORE_MODULE support.

2007-06-10  Quentin Mathe <qmathe@club-internet.fr>

	* README: Added StepTalk and XScreenSaver to Dependency section. 
	Updated gnustep-make required version to 2.0. Removed comment about
	broken 'sudo' support which isn't true anymore (in my experience). 
	Added a clear WARNING to make evident you cannot avoid setup.sh.
	* INSTALL: Made Required software section up-to-date.
	* INSTALL.Ubuntu: Updated to take in account new dependencies 
	introduced by Idle. Also explained Edgy Eft section is also valid for
	Feisty Fawn.

2007-05-07  Yen-Ju Chen <yjchen gmail>

	* etoile.make: use $(SHARED_LIBEXT) instead of so. 
	  Patched by Yves de Champlain (#9046).

2007-04-28  Quentin Mathe <qmathe@club-internet.fr>

	* README: Updated Dependency section and added David to Authors section
	(now sorted by alphetical order). Also made clearer that Cocoa support 
	isn't our priority.
	* INSTALL: Made Required software section up-to-date.

2007-04-27  Quentin Mathe <qmathe@club-internet.fr>

	* Frameworks/GNUmakefile: Turned on IconKit compilation because it is now 
	used by applications like Vindaloo.

2007-04-27  Quentin Mathe <qmathe@club-internet.fr>

	* INSTALL.Ubuntu: Updated to take in account latest dependencies introduced
	by System and Azalea. Added a web reference to Ubuntu package list 
	classified by version (Dapper, Breezy etc.).

2007-04-24  Quentin Mathe <qmathe@club-internet.fr>

	* Themes/GNUstep.icontheme: Added GNUstep icon theme by Jesse Ross and 
	Jasper Hauser. This theme follows Freedesktop Icon Naming Specification 
	with some generic extensions and more specific additions (to fit Etoile 
	needs). Ready to be used by IconKit with a minor update of the latter
	framework.
